@@ -15,6 +15,9 @@ Bugs:
 * Bare URLs entered into posts were getting stray single quotes placed around them.
 * Crash if all permissions are unset on a user edit.
 * BBCode menu was not functional on the random quotes editor.
+* Fixed an issue with the emoticon editor in the ACP.
+* Submitting a false positive on a comment was calling an invalid function name.
+* User count stats were referencing the wrong variable and giving inaccurate counts.
 
 Changes for Sandbox 2.3
 -----------------------
